feat: add header and intro

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,2 +1,20 @@
 $tablet: 991px;
 $mobile: 575px;
+
+$dark: #22253B;
+$orange: #F15525;
+$white: #fff;
+$soft: #F9F8FD;
+$light-gray:#eaf2f5;
+$gray: #D8D8D8;
+$soft-gray: #dedede;
+$dark-gray: #8E8E8E;
+$blue: #38BFF2;
+
+$regular: 'Gilroy-Regular';
+$medium: 'Gilroy-Medium';
+$heavy: 'Gilroy-Heavy';
+$bold: 'Gilroy-Bold';
+$semibold: 'Gilroy-SemiBold';
+
+$linear: all linear .3s;
