--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,10 +12,10 @@ html {
 }
 
 body {
-    background-color: black;
+    background-color: $soft;
     font-size: 1.4rem;
-    font-family: 'Gilroy-Medium';
-    color: white;
+    font-family: $regular;
+    color: $dark;
 }
 
 img {
@@ -23,5 +23,26 @@ img {
 }
 
 .container {
-    @include container(1160px, 0)
+    @include container(1160px, 0);
 }
+
+.phone-number {
+    text-decoration: none;
+    color: $blue;
+    font-size: 1.6rem;
+    line-height: 144%;
+}
+
+.title {
+    font-family: $medium;
+    font-size: 4.6rem;
+}
+
+.bold {
+    font-family: $bold;
+}
+
+@import "components/header";
+@import "components/nav";
+@import "components/intro";
+@import "components/button";
