--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -14,6 +14,14 @@
     background-color: $white;
 }
 
+.header__logo {
+    margin-right: 4.9rem;
+}
+
+.header__left {
+    @include flex()
+}
+
 .header__burger {
     cursor: pointer;
     display: none;
