feat: add handle modal window

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,6 +1,7 @@
 $tablet: 991px;
 $mobile: 575px;
 
+$black: #000;
 $dark: #22253B;
 $orange: #F15525;
 $white: #fff;
@@ -8,6 +9,7 @@ $soft: #F9F8FD;
 $light-gray:#eaf2f5;
 $gray: #D8D8D8;
 $soft-gray: #dedede;
+$secondary-gray: #9f9f9f;
 $dark-gray: #8E8E8E;
 $blue: #38BFF2;
 
