--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -67,13 +67,14 @@ a {
 
 @import "components/button";
 @import "components/nav";
-@import "components/header";
-@import "components/intro";
-@import "components/benefits";
-@import "components/info";
-@import "components/gallery";
-@import "components/map";
-@import "components/footer";
 @import "components/socials";
 @import "components/modal";
 @import "components/form";
+@import "components/slick-slider";
+@import "blocks/header";
+@import "blocks/intro";
+@import "blocks/benefits";
+@import "blocks/info";
+@import "blocks/gallery";
+@import "blocks/map";
+@import "blocks/footer";
