--- a/src/scss/components/slick-slider.scss
+++ b/src/scss/components/slick-slider.scss
@@ -21,7 +21,7 @@
 
     &.slick-prev {
         left: 2.4rem;
-        background-image: url("../../img/svg/arrows/arrow-prev.svg");
+        background-image: url("../img/svg/arrows/arrow-prev.svg");
         background-repeat: no-repeat;
         background-size: 50%;
         background-position: 50% 50%;
@@ -33,7 +33,7 @@
 
     &.slick-next {
         right: 2.4rem;
-        background-image: url("../../img/svg/arrows/arrow-next.svg");
+        background-image: url("../img/svg/arrows/arrow-next.svg");
         background-repeat: no-repeat;
         background-size: 50%;
         background-position: 50% 50%;
