--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -12,10 +12,19 @@
     margin: 2.4rem auto;
     padding: 1.5rem 3.4rem;
     background-color: $white;
+
+    @include breakpoint($mobile) {
+        padding: 0.9rem 1.9rem;
+        margin: 1.9rem auto;
+    }
 }
 
 .header__logo {
     margin-right: 4.9rem;
+
+    @include breakpoint($tablet-pt) {
+        margin: 0;
+    }
 }
 
 .header__left {
@@ -67,17 +76,16 @@
         height: 100%;
         flex-direction: column;
         background-color: $white;
-        padding: 3.2rem 3rem 3.2rem 4.3rem;
+        padding: 3.6rem 3.4rem 3.6rem 4.8rem;
 
         .nav__list {
             flex-direction: column;
             align-items: normal;
-            padding-top: 8rem;
+            padding-top: 8.9rem;
         }
 
         .nav__item {
             margin-right: 0;
-            margin-bottom: 1.6rem;
 
             &--hidden {
                 display: inline;
@@ -85,10 +93,19 @@
         }
 
         .nav__link {
-            font-size: 2rem;
+            font-size: 2.3rem;
             font-family: $medium;
-            line-height: 100%;
+            line-height: 194%;
             color: $dark;
+        }
+    }
+}
+
+.header__phone {
+    @include breakpoint($mobile) {
+
+        .phone-number {
+            font-size: 1.6rem;
         }
     }
 }
