--- a/src/scss/blocks/intro.scss
+++ b/src/scss/blocks/intro.scss
@@ -1,5 +1,9 @@
 .intro {
     margin-top: 9.8rem;
+
+    @include breakpoint($mobile) {
+        margin-top: 7.7rem;
+    }
 }
 
 .intro__slider {
@@ -11,16 +15,43 @@
     background-color: $white;
     padding: 6rem 2.4rem 5.6rem 9.8rem;
     border-radius: 7.5rem;
-    background: url("../img/intro/bg.jpg") center no-repeat;
+    background: url("../img/intro/bg.jpg") right no-repeat;
     background-size: cover;
+
+    @include breakpoint($tablet-pt) {
+        flex-direction: column;
+        padding: 6rem 2.6rem 4.6rem;
+        border-radius: 5rem;
+        text-align: center;
+        background: url("../img/intro/bg-mobile.jpg") center no-repeat;
+        background-size: cover;
+    }
 }
 
 .intro__banner-info {
     max-width: 61.5%;
+
+    @include breakpoint($tablet) {
+        max-width: 57%;
+    }
+    @include breakpoint($tablet-pt) {
+        max-width: none;
+        margin-bottom: 3.5rem;
+    }
 }
 
 .intro__banner-title {
     margin-bottom: 2.4rem;
+
+    @include breakpoint($tablet) {
+        font-size: 3.8rem;
+        position: relative;
+        z-index: 1;
+    }
+
+    @include breakpoint($mobile) {
+        font-size: 2.7rem;
+    }
 }
 
 .intro__banner__text {
@@ -41,9 +72,37 @@
         height: 1px;
         background-color: $soft-gray;
     }
+
+    @include breakpoint($tablet-pt) {
+        max-width: none;
+    }
+
+    @include breakpoint($mobile) {
+        font-size: 1.4rem;
+    }
 }
 
 .intro__banner-img-box {
-    margin-top: 1.6rem;
-    margin-right: 5rem;
+    position: relative;
+    top: 1.6rem;
+    right: 5rem;
+
+    @include breakpoint(1155px) {
+        top: 6rem;
+        right: 7rem;
+    }
+
+    @include breakpoint($tablet) {
+        top: -3rem;
+        right: 3rem;
+    }
+
+    @include breakpoint(880px) {
+        top: 1rem;
+        right: 5rem;
+    }
+
+    @include breakpoint($tablet-pt) {
+        position: static;
+    }
 }
