--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -27,4 +27,8 @@
         height: 16px;
         background: url("../img/svg/arrows/arrow.svg");
     }
+
+    @include breakpoint($mobile) {
+        font-size: 2.2rem;
+    }
 }
