--- a/src/scss/components/modal.scss
+++ b/src/scss/components/modal.scss
@@ -15,10 +15,10 @@
 }
 
 .modal__content {
+    position: relative;
     background-color: $white;
-    margin: 1% auto;
+    margin: 2% auto;
     padding: 8rem 5.4rem;
-    width: 54.74%;
     opacity: 0;
     transition: $linear;
     transform: scale(0);
@@ -27,10 +27,43 @@
         transform: scale(1);
         opacity: 1;
     }
+
+    &--form {
+        width: 635px;
+    }
+
+    @include breakpoint($tablet-pt) {
+        width: 98%;
+    }
+    @include breakpoint($mobile) {
+        padding: 5rem 2.7rem 3.7rem;
+    }
 }
 
 .modal__title {
     font-size: 3.2rem;
     text-align: center;
     margin-bottom: 4.6rem;
+
+    @include breakpoint($mobile) {
+        font-size: 2.7rem;
+        margin-bottom: 2.7rem;
+    }
+}
+
+.modal__close {
+    position: absolute;
+    top: 3rem;
+    right: 3rem;
+    cursor: pointer;
+    transition: $linear;
+
+    &:hover {
+        transform: rotate(90deg);
+    }
+
+    @include breakpoint($mobile) {
+        top: 2.4rem;
+        right: 2.4rem;
+    }
 }
